[gd_scene load_steps=20 format=3 uid="uid://dqoc2hr1j5nes"]

[ext_resource type="Material" uid="uid://d0i3q6j44jwns" path="res://assets/Materials/FloorMat.tres" id="1_v0vyb"]
[ext_resource type="Script" path="res://scripts/RtsController.gd" id="1_viu7g"]
[ext_resource type="Script" path="res://scripts/UnitSelectors.gd" id="3_6batn"]
[ext_resource type="PackedScene" uid="uid://dq42xeuq87gyq" path="res://scenes/buildings/units_building.tscn" id="3_22evx"]
[ext_resource type="PackedScene" uid="uid://br8hy7u2wml0g" path="res://scenes/units/worker.tscn" id="3_avuv1"]
[ext_resource type="PackedScene" uid="uid://dr53uwyqn2m7j" path="res://scenes/buildings/main_building.tscn" id="5_akn3g"]
[ext_resource type="Script" path="res://scripts/gui/GUIController.gd" id="5_ru7yq"]
[ext_resource type="Texture2D" uid="uid://k7fnbofhk0c2" path="res://assets/GUI/DetailBar.png" id="5_yyinu"]
[ext_resource type="PackedScene" uid="uid://ysfxr672c1a5" path="res://scenes/units/warrior.tscn" id="6_5ut15"]
[ext_resource type="Texture2D" uid="uid://d2p1j6ypo4vf5" path="res://assets/GUI/MiniMap_Portrait.png" id="6_w77ne"]
[ext_resource type="Texture2D" uid="uid://cligqukgffx0t" path="res://assets/GUI/SelectionBar.png" id="7_1p5wc"]
[ext_resource type="Texture2D" uid="uid://bb8sf1tl1kjka" path="res://assets/GUI/WorkerImg.jpg" id="8_eu2y7"]
[ext_resource type="Texture2D" uid="uid://djhyxgkv3fwth" path="res://assets/GUI/MainBuildingImg.jpg" id="13_mw8ha"]

[sub_resource type="NavigationMesh" id="NavigationMesh_mukkp"]
vertices = PackedVector3Array(-149.5, 0.5, 0, -13.75, 0.5, 0, -13.75, 0.5, -1.25, -149.5, 0.5, 0, -13.75, 0.5, -1.25, -13.25, 0.5, -1.75, -12, 0.5, -149.5, -149.5, 0.5, -149.5, -13.25, 0.5, -1.75, -12, 0.5, -1.75, -12, 0.5, -149.5, 1.75, 0.5, 11.25, 2.5, 0.75, 13.5, 3.5, 0.5, 13.5, -10.25, 0.5, -1.25, -10.25, 0.5, 1, -1.5, 0.5, 11.25, 1.75, 0.5, 11.25, -10.25, 0.5, -1.25, 1.75, 0.5, 11.25, 149.5, 0.5, 14, 149.5, 0.5, -149.5, -12, 0.5, -149.5, 3.5, 0.5, 13.5, 3.5, 0.75, 14, 149.5, 0.5, 14, -12, 0.5, -149.5, -12, 0.5, -1.75, -10.75, 0.5, -1.75, 1.75, 0.5, 11.25, 3.5, 0.5, 13.5, 149.5, 0.5, 14, -12, 0.5, -149.5, -10.75, 0.5, -1.75, -10.25, 0.5, -1.25, -12.25, 0.5, -0.25, -12.25, 0.5, 0.25, -11.75, 0.5, 0.25, -11.75, 0.5, -0.25, -2.75, 0.5, 15.25, -3, 1, 14.5, -3.5, 0.75, 14.5, 0, 0.5, 149.5, -1.75, 0.5, 16.25, -2, 1, 15.25, -2.75, 0.5, 15.25, 0, 0.5, 149.5, -3.5, 0.5, 13.5, -2.5, 0.75, 13.5, -2.25, 0.5, 11.75, -10.75, 0.5, 1.75, -1.5, 0.5, 11.25, -10.25, 0.5, 1, -10.75, 0.5, 1.75, -2.25, 0.5, 11.75, -3.5, 0.75, 14.5, -13.25, 0.5, 1.75, -13.75, 0.5, 1.25, -149.5, 0.5, 0, -149.5, 0.5, 149.5, 0, 0.5, 149.5, 0, 0.5, 149.5, 0, 0.5, 16.75, -1.75, 0.5, 16.25, -3.5, 0.75, 14.5, -3.5, 0.5, 13.5, -10.75, 0.5, 1.75, -13.25, 0.5, 1.75, -13.75, 0.5, 1.25, -13.75, 0.5, 0, -149.5, 0.5, 0, -0.25, 4, 14, -0.25, 4, 14.5, 0.25, 4, 14.5, 0.25, 4, 14, 2.75, 0.5, 15.25, 2.25, 1, 15.25, 2, 0.5, 16.25, 0, 0.5, 149.5, 2, 0.5, 16.25, 0, 0.5, 16.75, 0, 0.5, 149.5, 3.5, 0.75, 14, 2.75, 0.5, 15.25, 0, 0.5, 149.5, 149.5, 0.5, 149.5, 149.5, 0.5, 14)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 7), PackedInt32Array(5, 7, 6), PackedInt32Array(10, 9, 8), PackedInt32Array(13, 12, 11), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 17), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 22), PackedInt32Array(20, 22, 21), PackedInt32Array(25, 24, 23), PackedInt32Array(28, 27, 26), PackedInt32Array(31, 30, 29), PackedInt32Array(34, 33, 32), PackedInt32Array(38, 37, 35), PackedInt32Array(35, 37, 36), PackedInt32Array(40, 39, 41), PackedInt32Array(41, 39, 42), PackedInt32Array(44, 43, 45), PackedInt32Array(45, 43, 46), PackedInt32Array(48, 47, 49), PackedInt32Array(49, 47, 50), PackedInt32Array(54, 53, 51), PackedInt32Array(51, 53, 52), PackedInt32Array(56, 55, 57), PackedInt32Array(57, 55, 58), PackedInt32Array(58, 55, 60), PackedInt32Array(58, 60, 59), PackedInt32Array(63, 62, 61), PackedInt32Array(65, 64, 66), PackedInt32Array(66, 64, 67), PackedInt32Array(70, 69, 68), PackedInt32Array(74, 73, 71), PackedInt32Array(71, 73, 72), PackedInt32Array(76, 75, 77), PackedInt32Array(77, 75, 78), PackedInt32Array(81, 80, 79), PackedInt32Array(83, 82, 84), PackedInt32Array(84, 82, 86), PackedInt32Array(84, 86, 85)]
geometry_parsed_geometry_type = 1
geometry_collision_mask = 4294967285

[sub_resource type="PlaneMesh" id="PlaneMesh_no55r"]
material = ExtResource("1_v0vyb")
size = Vector2(300, 300)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wuej1"]
data = PackedVector3Array(150, 0, 150, -150, 0, 150, 150, 0, -150, -150, 0, 150, -150, 0, -150, 150, 0, -150)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_imy71"]

[sub_resource type="Sky" id="Sky_n35xn"]
sky_material = SubResource("ProceduralSkyMaterial_imy71")

[sub_resource type="Environment" id="Environment_gsi72"]
background_mode = 2
sky = SubResource("Sky_n35xn")
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.025
volumetric_fog_detail_spread = 4.28709
volumetric_fog_temporal_reprojection_amount = 0.99

[node name="World" type="Node3D"]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_mukkp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_no55r")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D" groups=["surface"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_wuej1")

[node name="MainBuilding" parent="NavigationRegion3D" instance=ExtResource("5_akn3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.2969)

[node name="UnitsBuilding" parent="NavigationRegion3D" instance=ExtResource("3_22evx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="RtsController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 0, 0)
script = ExtResource("1_viu7g")

[node name="Camera3D" type="Camera3D" parent="RtsController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 17)

[node name="UnitSelector" type="Control" parent="RtsController"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_6batn")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 0.779141, -3.40573e-08, 0.626849, -0.626849, 2.74004e-08, 0.779141, 0, 23, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gsi72")

[node name="Units" type="Node" parent="."]

[node name="Worker" parent="Units" instance=ExtResource("3_avuv1")]

[node name="Worker2" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573409, 0, -1.02505)

[node name="Worker3" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00925, 0, 0)

[node name="Worker4" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.58266, 0, -1.02505)

[node name="Worker5" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.28346)

[node name="Worker6" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573409, 0, 1.25841)

[node name="Worker7" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00925, 0, 2.28346)

[node name="Worker8" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.58266, 0, 1.25841)

[node name="Worker9" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.43011)

[node name="Worker10" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573409, 0, 4.40506)

[node name="Worker11" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00925, 0, 5.43011)

[node name="Worker12" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.58266, 0, 4.40506)

[node name="Worker13" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.71358)

[node name="Worker14" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573409, 0, 6.68853)

[node name="Worker15" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.00925, 0, 7.71358)

[node name="Worker16" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.58266, 0, 6.68853)

[node name="Worker17" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46127, 0, 0)

[node name="Worker18" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03468, 0, -1.02505)

[node name="Worker19" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.47052, 0, 0)

[node name="Worker20" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.04393, 0, -1.02505)

[node name="Worker21" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46127, 0, 2.28346)

[node name="Worker22" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03468, 0, 1.25841)

[node name="Worker23" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.47052, 0, 2.28346)

[node name="Worker24" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.04393, 0, 1.25841)

[node name="Worker25" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46127, 0, 5.43011)

[node name="Worker26" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03468, 0, 4.40506)

[node name="Worker27" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.47052, 0, 5.43011)

[node name="Worker28" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.04393, 0, 4.40506)

[node name="Worker29" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46127, 0, 7.71358)

[node name="Worker30" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03468, 0, 6.68853)

[node name="Worker31" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.47052, 0, 7.71358)

[node name="Worker32" parent="Units" instance=ExtResource("3_avuv1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.04393, 0, 6.68853)

[node name="Warrior" parent="Units" instance=ExtResource("6_5ut15")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="Warrior2" parent="Units" instance=ExtResource("6_5ut15")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2.05285)

[node name="Warrior3" parent="Units" instance=ExtResource("6_5ut15")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.27645, 0, 0)

[node name="Warrior4" parent="Units" instance=ExtResource("6_5ut15")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.27645, 0, -2.05285)

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS:"

[node name="GUIController" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ru7yq")

[node name="GuiHbox" type="HBoxContainer" parent="UI/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -202.0
offset_right = 586.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="MiniBarCont" type="TextureRect" parent="UI/GUIController/GuiHbox"]
custom_minimum_size = Vector2(207, 202)
layout_mode = 2
texture = ExtResource("6_w77ne")
expand_mode = 1

[node name="InfoBar" type="TextureRect" parent="UI/GUIController/GuiHbox"]
custom_minimum_size = Vector2(735, 181)
layout_mode = 2
texture = ExtResource("5_yyinu")
expand_mode = 1

[node name="UnitHbox" type="HBoxContainer" parent="UI/GUIController/GuiHbox/InfoBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -70.5
offset_right = 306.5
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="MainUnitImgContainer" type="TextureRect" parent="UI/GUIController/GuiHbox/InfoBar/UnitHbox"]
custom_minimum_size = Vector2(113, 113)
layout_mode = 2
texture = ExtResource("6_w77ne")
expand_mode = 1

[node name="MainUnitImg" type="TextureRect" parent="UI/GUIController/GuiHbox/InfoBar/UnitHbox/MainUnitImgContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.213
anchor_top = 0.5
anchor_right = 3.213
anchor_bottom = 0.5
offset_left = -359.069
offset_top = -52.5
offset_right = -254.069
offset_bottom = 52.5
grow_vertical = 0
texture = ExtResource("8_eu2y7")
expand_mode = 1

[node name="UnitsGrid" type="GridContainer" parent="UI/GUIController/GuiHbox/InfoBar/UnitHbox"]
custom_minimum_size = Vector2(496, 141)
layout_mode = 2
columns = 8

[node name="SelectionBar" type="TextureRect" parent="UI/GUIController/GuiHbox"]
custom_minimum_size = Vector2(215, 202)
layout_mode = 2
texture = ExtResource("7_1p5wc")
expand_mode = 1

[node name="SelBarGridContainer" type="GridContainer" parent="UI/GUIController/GuiHbox/SelectionBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0651163
anchor_top = 0.0990099
anchor_right = 0.962791
anchor_bottom = 1.24752
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 21
columns = 4
metadata/_edit_use_anchors_ = true

[node name="OptionButton1" type="TextureButton" parent="UI/GUIController/GuiHbox/SelectionBar/SelBarGridContainer"]
custom_minimum_size = Vector2(35, 42)
layout_mode = 2
texture_normal = ExtResource("13_mw8ha")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionButton2" type="TextureButton" parent="UI/GUIController/GuiHbox/SelectionBar/SelBarGridContainer"]
custom_minimum_size = Vector2(35, 42)
layout_mode = 2
texture_normal = ExtResource("13_mw8ha")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="UI/GUIController/GuiHbox/SelectionBar/SelBarGridContainer/OptionButton1" to="UI/GUIController" method="_on_option_button_1_pressed"]
[connection signal="pressed" from="UI/GUIController/GuiHbox/SelectionBar/SelBarGridContainer/OptionButton2" to="UI/GUIController" method="_on_option_button_2_pressed"]
